--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bnf-parser",
-  "version": "1.0.0",
+  "version": "1.0.1"
   "description": "Deterministic BNF compiler/parser",
   "main": "index.js",
   "scripts": {
