--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Deterministic BNF compiler/parser",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "node build.js --test",
     "build": "node build.js"
   },
   "repository": {
@@ -17,5 +17,13 @@
     "parse"
   ],
   "author": "Ajani Bilby",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bnf-parser": "^2.2.5",
+    "node-getopt": "^0.3.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
