--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bnf-parser",
   "version": "3.0.0",
   "description": "Deterministic BNF compiler/parser",
-  "main": "index.js",
+  "main": "./bin/index.js",
   "scripts": {
-    "test": "node build.js --test",
-    "build": "node build.js"
+    "test": "node ./bin/build.js --verify",
+    "build": "tsc & node ./bin/build.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "node-getopt": "^0.3.2"
   },
   "devDependencies": {
+    "@types/node-getopt": "^0.2.32",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
