--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "bnf-parser",
-  "version": "3.0.0",
-  "description": "Deterministic BNF compiler/parser",
-  "main": "./bin/index.js",
-  "scripts": {
-    "test": "node ./bin/build.js --verify",
-    "build": "tsc & node ./bin/build.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AjaniBilby/BNF-parser"
-  },
-  "keywords": [
-    "bnf",
-    "compile",
-    "parse",
-    "typescript"
-  ],
-  "author": "Ajani Bilby",
-  "license": "ISC",
-  "dependencies": {
-    "bnf-parser": "^2.2.5",
-    "node-getopt": "^0.3.2"
-  },
-  "devDependencies": {
-    "@types/node-getopt": "^0.2.32",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  }
+	"name": "bnf-parser",
+	"version": "3.0.0",
+	"description": "Deterministic BNF compiler/parser",
+	"main": "./bin/index.js",
+	"scripts": {
+		"test": "node ./bin/build.js --verify",
+		"build": "tsc & node ./bin/build.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/AjaniBilby/BNF-parser"
+	},
+	"keywords": [
+		"bnf",
+		"compile",
+		"parse",
+		"typescript"
+	],
+	"author": "Ajani Bilby",
+	"license": "ISC",
+	"dependencies": {
+		"bnf-parser": "^2.2.5",
+		"getopts": "^2.3.0"
+	},
+	"devDependencies": {
+		"@types/node-getopt": "^0.2.32",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.4"
+	}
 }
