--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
 	"description": "Deterministic BNF compiler/parser",
 	"main": "./bin/index.js",
 	"scripts": {
-		"test": "node ./bin/build.js --verify --verbose",
-		"build": "tsc & node ./bin/build.js --verbose"
+		"test": "node ./test",
+
+		"build": "npm run build-ts & npm run build-syntax",
+		"build-ts": "tsc",
+		"build-syntax": "node ./bin/build.js --verbose"
+
 	},
 	"repository": {
 		"type": "git",
