--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Execution
+name: Test
 
 on:
   push:
@@ -23,6 +23,9 @@ jobs:
       - name: Install NPM Dependencies
         run: npm install
 
+      - name: Build the library
+        run: npm run build
+
       - name: Automated tests
         run: npm run test
 
@@ -41,6 +44,9 @@ jobs:
 
       - name: Install NPM Dependencies
         run: npm install
+
+      - name: Build the library
+        run: npm run build
 
       - name: Automated tests
         run: npm run test
