~Incorrect build mode

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install
 
       - name: Build the library
-        run: npm run build
+        run: tsc
 
       - name: Automated tests
         run: npm run test
@@ -46,7 +46,7 @@ jobs:
         run: npm install
 
       - name: Build the library
-        run: npm run build
+        run: tsc
 
       - name: Automated tests
         run: npm run test
