--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"url": "https://github.com/AjaniBilby/BNF-parser"
 	},
 	"keywords": [
+		"ast",
 		"bnf",
 		"compile",
 		"parse",
@@ -23,10 +24,9 @@
 	],
 	"author": "Ajani Bilby",
 	"license": "ISC",
-	"dependencies": {
-		"getopts": "^2.3.0"
-	},
+	"dependencies": {	},
 	"devDependencies": {
+		"getopts": "^2.3.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
 	}
