--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "bnf-parser",
-	"version": "3.1.2",
+	"version": "3.1.3",
 	"description": "Deterministic BNF compiler/parser",
 	"main": "./bin/index.js",
 	"scripts": {
 		"test": "node ./test",
-		"build": "npm run build-ts & npm run build-syntax",
-		"build-ts": "tsc",
-		"build-syntax": "node ./bin/build.js --verbose"
+		"build": "run-s build:*",
+		"build:ts": "tsc",
+		"build:syntax": "node ./bin/build.js --verbose"
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +25,7 @@
 	"devDependencies": {
 		"@types/node": "^18.11.10",
 		"getopts": "^2.3.0",
+		"npm-run-all": "^4.1.5",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
 	}
