--- a/.github/workflows/npm-load-check.yml
+++ b/.github/workflows/npm-load-check.yml
@@ -1,10 +1,8 @@
-name: Test
+name: Test via NPM
 
 on:
   push:
-    branches: [ master, dev ]
-  pull_request:
-    branches: [ master, dev ]
+    branches: [ master ]
 
 jobs:
   run-linux:
@@ -21,13 +19,7 @@ jobs:
           node-version: 16
 
       - name: Install NPM Dependencies
-        run: npm install
-
-      - name: Install bnf-parser
-        run: npm install . -g
-
-      - name: Build the library
-        run: npm run build
+        run: npm install bnf-parser
 
       - name: Automated tests
         run: npm run test
