+npm link global package to local

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install bnf-parser
         run: npm install . -g
 
+      - name: Link local package
+        run: npm link bnf-parser
+
       - name: Build the library
         run: npm run build
 
