--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,7 @@
+*
+
 !bin/*
-node_modules/*
-source/*
-
-test/*
-
-bnf-hand.json
-bnf.bnf
-
-tsconfig.json
+!bnf.json
+!changelog.md
+!package.json
+!readme.md
