--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "npm run build & node ./test",
 		"build": "run-s build:*",
 		"build:ts": "tsc",
-		"build:syntax": "node ./bin/build.js --verbose"
+		"build:syntax": "ts-node ./tools/build-syntax",
+		"build:preload": "ts-node ./tools/post-build.ts"
 	},
 	"repository": {
 		"type": "git",
@@ -24,9 +25,11 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/node": "^18.11.10",
-		"getopts": "^2.3.0",
 		"npm-run-all": "^4.1.5",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
+	},
+	"dependencies": {
+		"bnf-parser": "^3.1.4"
 	}
 }
