--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bnf-parser",
-	"version": "3.1.3",
+	"version": "3.1.4",
 	"description": "Deterministic BNF compiler/parser",
 	"main": "./bin/index.js",
 	"scripts": {
@@ -19,7 +19,8 @@
 		"bnf",
 		"compile",
 		"parse",
-		"typescript"
+		"typescript",
+		"webpack ready"
 	],
 	"author": "Ajani Bilby",
 	"license": "ISC",
