--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "3.1.6",
 	"description": "Deterministic BNF compiler/parser",
 	"main": "./bin/index.js",
+	"type": "module",
 	"scripts": {
 		"test": "npm run build & node ./test",
 		"build": "run-s build:*",
@@ -29,5 +30,8 @@
 		"npm-run-all": "^4.1.5",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
+	},
+	"dependencies": {
+		"binaryen": "^113.0.0"
 	}
 }
