--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"target": "ES2018",
 		"module": "ESNext",
 		"moduleResolution": "node",
+		"esModuleInterop": true,
 		"declaration": true,
 		"outDir": "./bin",
 		"strict": true
