--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
 	"editor.insertSpaces": false,
 	"[markdown]": {
 		"files.trimTrailingWhitespace": false
-	}
+	},
+	"cSpell.words": [
+		"binaryen"
+	]
 }
