--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,12 @@
 {
 	"parserOptions": {
-			"ecmaVersion": 6,
-			"sourceType": "module",
-			"ecmaFeatures": {
-					"jsx": true
-			}
+		"ecmaVersion": 6,
+		"sourceType": "module",
+		"ecmaFeatures": {
+			"jsx": false
+		}
 	},
 	"rules": {
-			"semi": "error"
+		"semi": "error"
 	}
 }
