--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
 		"outDir": "./bin",
 		"strict": true
 	},
-	"include": ["source"],
-	"exclude": ["node_modules", "source/build.ts"]
+	"include": ["source", "tools"],
+	"exclude": ["node_modules"]
 }
