--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,9 +1,8 @@
-name: ci
+name: Deploy Docs
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [ master ]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
