--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "bnf-parser",
 	"version": "3.1.6",
 	"description": "Deterministic BNF compiler/parser",
+	"homepage": "https://bnf-parser.ajanibilby.com",
 	"main": "./bin/index.js",
 	"scripts": {
 		"test": "npm run build & node ./test",
