--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"bnf-compile": "bin/cli.js"
 	},
 	"scripts": {
-		"test": "npm run build & node ./test/index.js",
+		"test": "node ./test/index.js",
 		"build": "run-s build:*",
 		"build:ts": "tsc",
 		"build:syntax": "node ./tools/build-syntax.js",
