--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ theme:
     - search.suggest
     - header.autohide
     - content.code.annotate
+    - content.action.edit
     - navigation.tabs
     - navigation.indexes
     - navigation.instant
@@ -56,6 +57,7 @@ plugins:
       enabled_if_env: CI
   - git-revision-date-localized:
       fallback_to_build_date: true
+      enable_creation_date: true
 markdown_extensions:
   - admonition
   - attr_list
