~Fixed bad site_url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: BNF Parser Docs
-site_url: https://bnf-parser.ajanibilby.me/
+site_url: https://bnf-parser.ajanibilby.com/
 site_description: BNF-Parser docs
 repo_name: bnf-parser
 repo_url: https://github.com/ajanibilby/bnf-parser
