--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"build:ts": "tsc",
 		"build:syntax": "node ./tools/build-syntax.js",
 		"build:preload": "node ./tools/post-build.js",
-		"build:bnfs": "node ./bin/cli.js ./bnf/"
+		"build:bnfs": "node ./bin/cli.js ./bnf/",
+		"build:bundle": "npx rollup ./bnf/bnf.js --file ./docs/source/static/dist/bnf-bundle.js --format umd --name Parser"
 	},
 	"repository": {
 		"type": "git",
@@ -36,8 +37,9 @@
 	"devDependencies": {
 		"@types/node": "^18.11.10",
 		"npm-run-all": "^4.1.5",
+		"rollup": "^3.26.2",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4"
+		"typescript": "^4.9.5"
 	},
 	"dependencies": {
 		"binaryen": "^113.0.0"
