--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,12 @@ nav:
     - artifact/index.md
     - Shared: artifact/shared.md
     - Individual: artifact/individual.md
+  - API:
+    - api/index.md
+    - Shared: api/shared.md
+    - BNF: api/bnf.md
+    - Types: api/types.md
+    - Wasm: api/wasm.md
   - Legacy:
     - legacy/index.md
     - Introduction: legacy/introduction.md
