--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"wasm"
 	],
 	"author": "Ajani Bilby",
-	"license": "ISC",
+	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^18.11.10",
 		"npm-run-all": "^4.1.5",
