--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
-		"binaryen": "^113.0.0"
+		"binaryen": "^113.0.0",
+		"chalk": "^5.3.0"
 	}
 }
