--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
 	"scripts": {
 		"test": "node ./test/index.js",
 		"build": "run-s build:*",
-		"build:ts": "tsc",
-		"build:syntax": "node ./tools/build-syntax.js",
-		"build:preload": "node ./tools/post-build.js",
+		"build:ts": "tsc & tsc-alias",
 		"build:bnfs": "node ./bin/cli.js ./bnf/ ./dist/",
 		"build:bundle": "npx rollup -c"
 	},
@@ -43,6 +41,7 @@
 	},
 	"dependencies": {
 		"binaryen": "^113.0.0",
-		"chalk": "^5.3.0"
+		"chalk": "^5.3.0",
+		"tsc-alias": "^1.8.8"
 	}
 }
