--- a/.github/workflows/npm-load-check.yml
+++ b/.github/workflows/npm-load-check.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   run-linux:
-    if: ${{ false }}  # disable for now
 
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -20,7 +19,7 @@ jobs:
           node-version: 16
 
       - name: Install NPM Dependencies
-        run: npm install bnf-parser
+        run: npm install bnf-parser -g
 
       - name: Automated tests
         run: npm run test
