--- a/.github/workflows/npm-load-check.yml
+++ b/.github/workflows/npm-load-check.yml
@@ -1,8 +1,15 @@
 name: Reflection Test (via NPM)
 
+# This configuration cancels previous runs if a new run is started on the same branch/PR. Only one run at a time per PR.
+# from https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-using-a-fallback-value
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   run-linux:
