--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,9 @@ jobs:
           node-version: 16
 
       - name: Install NPM Dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm install tsc-alias -g
 
       - name: Build the library
         run: npm run build
