--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ on:
     branches: [ main, unstable ]
 
 jobs:
-  run-linux:
+  test-linux:
 
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -27,9 +27,7 @@ jobs:
           node-version: 16
 
       - name: Install NPM Dependencies
-        run: |
-          npm ci
-          npm install tsc-alias -g
+        run: npm ci
 
       - name: Build the library
         run: npm run build
