--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"scripts": {
 		"test": "node ./test/index.js",
 		"build": "run-s build:*",
-		"build:ts": "tsc & tsc-alias",
+		"build:ts": "tsc",
+		"build:alias": "tsc-alias",
 		"build:bnfs": "node ./bin/cli.js ./bnf/ ./dist/",
 		"build:bundle": "npx rollup -c"
 	},
@@ -33,7 +34,7 @@
 	"author": "Ajani Bilby",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^18.11.10",
+		"@types/node": "^18.19.5",
 		"npm-run-all": "^4.1.5",
 		"rollup": "^3.26.2",
 		"ts-node": "^10.9.1",
