--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Automated tests
         run: npm run test
+
+      - name: Rebuild using itself
+        run: npm run build
