brought in changes to CI/docs from `v5.x` branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ on:
     branches: [ main, unstable ]
 
 jobs:
-  run-linux:
+  test-linux:
 
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -27,16 +27,13 @@ jobs:
           node-version: 16
 
       - name: Install NPM Dependencies
-        run: npm install
-
-      - name: Install bnf-parser
-        run: npm install . -g
-
-      - name: Link local package
-        run: npm link bnf-parser
+        run: npm ci
 
       - name: Build the library
         run: npm run build
 
       - name: Automated tests
         run: npm run test
+
+      - name: Rebuild using itself
+        run: npm run build
